fix: table spacing

--- a/src/styles/tables.css
+++ b/src/styles/tables.css
@@ -12,7 +12,7 @@ table {
     }
 
     td {
-        font-size: 0.9rem;
+        font-size: 0.8rem;
         max-width: 22rem;
         overflow: hidden;
         font-family: var(--font-mono);
